--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>fullstack-example</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" style="margin:0;padding:0"></div>
     <!-- Important that the script is only include AFTER the root div has
         been declared.-->
     <!-- Also, for webpack-dev-server, make sure this points to the file IN 
